[feature #155538919 #155538934] Users can filter businesses

--- a/UI/index.html
+++ b/UI/index.html
@@ -23,8 +23,17 @@
 
                 <div class="col-md-12">
                     <h3>Available Businesses</h3>
+                    <div id="filter">Filter By: 
+                            <select id="text-box">
+                                <option selected>Default</option>
+                                <option>By Name</option>
+                                <option>By Location</option>
+                            </select>
+                        </div>
 -
                 </div>
+
+                
 
 
         </div>
