--- a/UI/index.html
+++ b/UI/index.html
@@ -33,6 +33,31 @@
 -
                 </div>
 
+                <div class="col-md-12"><br />
+
+                    <table border="1"class="table table-condensed" style="width:80% !important;
+                    margin:auto;">
+                      <thead>
+                        <tr>
+                          <th id="th1">Name</th>
+                          <th id="th2">Location</th>
+                          <th id="th3">Update</th>
+                          <th id="th3">Review</th>
+                          <th id="th3">Delete</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>             
+                            <td>Andela</td>
+                            <td>TRM</td>
+                            <td id="glyph"><span class="glyphicon glyphicon-edit"></span></td>
+                            <td id="glyph"><span class="glyphicon glyphicon-info-sign"></span></td>
+                            <td id="glyph"><span class="glyphicon glyphicon-remove-sign"></span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    </div>
+
                 
 
 
